# Git-Bug-Fixer

./: .env.example  .gitignore  README.md  pyproject.toml  script.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/routes/: analysis.py  dashboard.py  health.py  webhook.py
app/core/: diff_parser.py  feature_engine.py  github_client.py  security.py
app/db/: __init__.py  session.py
app/ml/: model.py  risk_report.py
app/schemas/: analysis.py  webhook.py
app/tasks/: analyze_pr.py  celery_app.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
ml_pipeline/configs/: baseline_config.yaml  codebert_config.yaml
ml_pipeline/data_collection/: __init__.py  mine_repos.py
ml_pipeline/training/: train_baseline.py  train_codebert.py
tests/: test_diff_parser.py  test_feature_engine.py  test_webhook.py
