[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "ai-pr-risk-analyzer"
version = "0.1.0"
description = "AI-powered Pull Request Risk Analyzer using CodeBERT"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT" 
authors = [{ name = "Aayush" }]
[tool.setuptools.packages.find]
include = ["app*", "ml_pipeline*"]
exclude = ["tests*", "docker*"]
dependencies = [
    # --- Web Framework ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",

    # --- Task Queue ---
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # --- Database ---
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",

    # --- GitHub ---
    "PyGithub>=2.1.0",

    # --- ML / Data Science ---
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.2.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "optuna>=3.5.0",

    # --- Explainability ---
    "shap>=0.44.0",

    # --- MLOps ---
    "mlflow>=2.10.0",

    # --- Diff Parsing ---
    "unidiff>=0.7.5",

    # --- Repository Mining ---
    "pydriller>=2.5",

    # --- Code Complexity ---
    "radon>=6.0.0",

    # --- Utilities ---
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "locust>=2.20.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101", "S104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
